--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="card">
           <!-- Band-card -->
           <div class="card-header text-center font-weight-bold">Bands</div>
-          <img class="card-img-top img-fluid" src="images/guitar-band.jpg" alt="Card image cap">
+          <img class="card-img-top img-fluid" src="guitar-band.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title font-weight-bold">Why your band should have a website?</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -109,7 +109,7 @@
         <div class="card">
             <!-- Hotel-card -->
             <div class="card-header text-center font-weight-bold">Hotels</div>
-            <img class="card-img-top img-fluid" src="images/hotel-01.jpg" alt="Card image cap">
+            <img class="card-img-top img-fluid" src="hotel-01.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title font-weight-bold">Why your band should have a website?</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -120,7 +120,7 @@
           <div class="card">
               <!-- Store-card -->
               <div class="card-header text-center font-weight-bold">Stores</div>
-              <img class="card-img-top img-fluid" src="images/store-01.jpg" alt="Card image cap">
+              <img class="card-img-top img-fluid" src="store-01.jpg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title font-weight-bold">Why your band should have a website?</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
