--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="card-header text-center font-weight-bold">Bands</div>
           <img class="card-img-top img-fluid" src="guitar-band.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title font-weight-bold">Why your band should have a website?</h5>
+            <h5 class="card-title font-weight-bold">Why your company needs to think of Ads?</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             <a href="#" class="btn btn-mybtns">Read more</a>
@@ -111,7 +111,7 @@
             <div class="card-header text-center font-weight-bold">Hotels</div>
             <img class="card-img-top img-fluid" src="hotel-01.jpg" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title font-weight-bold">Why your band should have a website?</h5>
+              <h5 class="card-title font-weight-bold">Why your company needs to think of web design?</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               <a href="#" class="btn btn-mybtns">Read more</a>
@@ -122,7 +122,7 @@
               <div class="card-header text-center font-weight-bold">Stores</div>
               <img class="card-img-top img-fluid" src="store-01.jpg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title font-weight-bold">Why your band should have a website?</h5>
+                <h5 class="card-title font-weight-bold">>Why your company needs to think of UI?</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 <a href="#" class="btn btn-mybtns">Read more</a>
@@ -305,7 +305,7 @@ window.addEventListener('load', function() {
         <div class="col-md-2 mx-auto">
 
           <!-- Links -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light">Musical Career</h5>
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light">How to learn Google Ads</h5>
 
           <ul class="list-unstyled">
             <li>
@@ -325,7 +325,7 @@ window.addEventListener('load', function() {
         <div class="col-md-2 mx-auto">
 
           <!-- Links -->
-          <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light">Small hotel, big online presence</h5>
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light">How to understand UI design</h5>
 
           <ul class="list-unstyled">
             <li>
