--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
      <!-- Google Fonts -->
      <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"> 
-     <link rel="stylesheet" href="fontawesome-web/css/all.css">
-     <link rel="stylesheet" href="fontawesome-web/webfonts/">
+     <link rel="stylesheet" href="all.css">
+     <link rel="stylesheet" href="/webfonts/">
 
 
     <title>Confide products</title>
