--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <!-- Google Fonts -->
      <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"> 
      <link rel="stylesheet" href="all.css">
-     <link rel="stylesheet" href="/webfonts/">
+     <link rel="stylesheet" href="webfonts/">
 
 
     <title>Confide products</title>
