--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
   <div class="row" id="icon-about">
     <!-- Drupal icon -->
     <div class="col-md-4">
-        <i class="fab fa-drupal fa-5x d-flex flex-column align-items-center mt-4 mb-2" style="color: #0073ba"></i>
-        <h1 class="text-center pb-2 ">Drupal</h1>
+        <i class="fas fa-code fa-5x d-flex flex-column align-items-center mt-4 mb-2" style="color: #0073ba"></i>
+        <h1 class="text-center pb-2 ">Development</h1>
         <p class="text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit porro voluptatem odio maxime nam explicabo, nostrum perferendis, maiores inventore laudantium sapiente, quod nesciunt! Rerum, quia iste fac</p>
     </div>
     <!-- /Drupal icon -->
 
     <!-- Wordpress icon -->
     <div class="col-md-4">
-      <i class="fab fa-wordpress fa-5x d-flex flex-column align-items-center mt-4 mb-2" style="color: black"></i>
-      <h1 class="text-center pb-2">Wordpress</h1>
+      <i class="fab fa-apple fa-5x d-flex flex-column align-items-center mt-4 mb-2" style="color: black"></i>
+      <h1 class="text-center pb-2">Apps</h1>
       <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quaerat pariatur quibusdam ullam, rem maiores blanditiis quia. Eius ut, natus nam veniam hic id expedita facilis ducimus dolorem voluptas quasi.</p>
     </div>
     <!-- /Wordpress icon -->
@@ -81,7 +81,7 @@
     <!-- Shopify icon -->
     <div class="col-md-4">
       <i class="fas fa-store fa-5x d-flex flex-column align-items-center mt-4 mb-2"  style="color: #9abf61"></i>
-      <h1 class="text-center pb-2">Shopify</h1>
+      <h1 class="text-center pb-2">Ecommerce</h1>
       <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ex provident accusamus magni est eveniet, ratione tempora exercitationem? Rerum cupiditate deserunt saepe asperiores minima praesentium quibusdam</p>
     </div>
     <!-- /Shopify icon -->
